Fix issue with logo not centered as desired.
OK so after a quick review, I was able to get the logo to center in your website by using the `align-self` Flexbox property with a `center` value. I just applied it to the anchor tag for the logo div (the one that has the `index.html` link.) It looked like this:

```
.logo a {
  align-self: center;
}
```

Simple, right?

You can read more about this property and Flexbox at another great CSS-Tricks resource I have which is this: [A Complete Guide to Flexbox | CSS-Tricks](https://css-tricks.com/snippets/css/a-guide-to-flexbox/)

--- a/EF Portfolio/css/style.css
+++ b/EF Portfolio/css/style.css
@@ -47,6 +47,11 @@ header {
   width: 80%;
 }
 
+/* Fix issue with logo not centered as desired. */
+.logo a {
+  align-self: center;
+}
+
 .ef-logo {
   text-align: center;
 }
